samples/_failures_safe/1761669898_578a20_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5892bd4d.c: In function ‘main’:
./samples/SAFE/__tmp_5892bd4d.c:155:28: error: missing terminating " character
  155 |                     printf("Matrix
      |                            ^~~~~~~
./samples/SAFE/__tmp_5892bd4d.c:155:21: error: expected expression at end of input
  155 |                     printf("Matrix
      |                     ^~~~~~
./samples/SAFE/__tmp_5892bd4d.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5892bd4d.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5892bd4d.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5892bd4d.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5892bd4d.c:155:21: error: expected declaration or statement at end of input
